--- a/courses.html
+++ b/courses.html
@@ -21,7 +21,7 @@
 
 <h1>School of Creative Technologies - Courses</h1>
 
-<img src="folder/home office.jpg" alt="Workspace Image">
+<img src="home office.jpg" alt="Workspace Image">
 
 <ul>
   <li><a href="main.html">Main</a></li>
