--- a/requirements.html
+++ b/requirements.html
@@ -21,7 +21,7 @@
 
 <h1>School of Creative Technologies - Requirements</h1>
 
-<img src="folder/desk.jpg" alt="desk">
+<img src="desk.jpg" alt="desk">
 
 <ul>
   <li><a href="main.html">Main</a></li>
