--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 
 <h1>School of Creative Technologies - Overview</h1>
 
-<img src="folder/tlc 1993.jpeg" alt="TLC Image" width="500">
+<img src="tlc_1993.jpeg" alt="tlc_1993"
 
 
 <ul>
