--- a/assignment2/main.html
+++ b/assignment2/main.html
@@ -21,7 +21,7 @@
 
 <h1>School of Creative Technologies - Overview</h1>
 
-<img src="tlc_1993.jpeg" alt="TLC 1993"
+<img src="tlc_1993.jpeg" alt="tlc_1993"
 
 
 <ul>
